--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "hbs": "~4.0.1",
     "morgan": "~1.9.0",
     "node-sass-middleware": "0.9.8",
+    "pg": "^7.4.1",
+    "sequelize": "^4.32.3",
     "serve-favicon": "~2.4.5"
   }
 }
